all file update

--- a/index.html
+++ b/index.html
@@ -3,9 +3,76 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Awlad.H</title>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+        <!-- header section -->
+        <header>
+                <nav>
+                        <h3 class="nav-tittle"><a href="">Awlad.H</a></h3>
+                        <a href=""><button class="primary-btn">Download Resume</button></a>
+                </nav>
+        </header>
+        <!-- header section -->
+
+        <!-- main section -->
+        <section class="main-container">
+                <div class="main-text">
+                        <img src="./assets/Group.png" alt="Boy Photo">
+                        <h1 class="main-text-tittle">"In the near future, I hope to become a Developer."</h1>
+                        <p class="main-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <a href=""><button class="primary-btn-main">Contact with me</button></a>
+                </div>
+        </section>
+        <!-- main section -->
+
+        <!-- main section -->
+         <div class="short-section">
+                <section class="web-container">
+                        <div class="web-text">
+                                <h3 class="web-text-tittle">Why Web Development??</h3>
+                                <p class="web-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                                         Lorem Ipsum has been the industry's standard dummy text.
+                                </p>
+                        </div>
+                        <div class="web-skill">
+                                <div class="web-skill-text">
+                                        <h3 class="web-skill-text-tittle">High Demand for Web Developers</h3>
+                                        <p class="web-skill-text-description">The growth of e-commerce and online services increases the need for web development professionals.                                        </p>
+                                        <a href="https://web.dev/learn/" target="_blank"><button class="web-skill-text-btn">Learn More</button></a>
+                                </div>
+                                <img src="./assets/Group 4.png" alt="">
+                        </div>
+                        <div class="web-skill">
+                                <img src="./assets/Group 3.png" alt="">
+                                <div class="web-skill-text">
+                                        <h3 class="web-skill-text-tittle">Good Salary Prospects</h3>
+                                        <p class="web-skill-text-description">Specialized skills in areas like front-end development, back-end development, or full-stack development can lead to higher earning potential</p>
+                                        <a href="https://web.dev/learn/" target="_blank"><button class="web-skill-text-btn">Learn More</button></a>
+                                </div>
+                        </div>
+                        <div class="web-skill">
+                                <div class="web-skill-text">
+                                        <h3 class="web-skill-text-tittle">Flexibility and Remote Work Opportunities</h3>
+                                        <p class="web-skill-text-description">Web development offers the possibility of remote work, providing flexibility in work location and hours.</p>
+                                        <a href="https://web.dev/learn/" target="_blank"><button class="web-skill-text-btn">Learn More</button></a>
+                                </div>
+                                <img src="./assets/Group 4.png" alt="">
+                        </div>
+                </section>
+                <!-- web-container -->
+
+                <section class="Inspiration">
+                        <div class="Inspiration-text">
+                                <h3 class="Inspiration-text-tittle">My Inspiration</h3>
+                                <p class="Inspiration-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                                        Lorem Ipsum has been the industry's standard dummy text.
+                                </p>
+                        </div>
+                </section>
         
+         </div>
 </body>
 </html>
