inspiration video added github and file update

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 </section>
                 <!-- web-container -->
 
+                <!-- Inspiration -->
                 <section class="Inspiration">
                         <div class="Inspiration-text">
                                 <h3 class="Inspiration-text-tittle">My Inspiration</h3>
@@ -71,8 +72,40 @@
                                         Lorem Ipsum has been the industry's standard dummy text.
                                 </p>
                         </div>
+                        <div class="fram">
+                                <iframe src="" frameborder="0"></iframe>
+                        </div>
                 </section>
-        
+                <!-- Inspiration -->
+
+                <section class="Inspiration">
+                        <div class="Inspiration-text">
+                                <h3 class="Inspiration-text-tittle">My Inspiration</h3>
+                                <p class="Inspiration-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                                        Lorem Ipsum has been the industry's standard dummy text.
+                                </p>
+                        </div>
+                        <div class="fram">
+                                <iframe src="" frameborder="0"></iframe>
+                        </div>
+                </section>
+
+                <section class="Inspiration">
+                        <div class="Inspiration-text">
+                                <h3 class="Inspiration-text-tittle">My Current Target</h3>
+                                <p class="Inspiration-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                                        Lorem Ipsum has been the industry's standard dummy text.
+                                </p>
+                        </div>
+                        <div class="target">
+                                <img src="" alt="">
+                                <h3 class="target-tittle">HTML</h3>
+                                <p class="target-description">Lorem Ipsum is simply dummy text of the printing</p>
+                                <a href="" target="_blank"><button class="target-btn">Learn More</button></a>
+                        </div>
+                </section>
+
+
          </div>
 </body>
 </html>
