all file update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Awlad.H</title>
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/Group.png" type="image/x-icon">
         <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <header>
                 <nav>
                         <h3 class="nav-tittle"><a href="">Awlad.H</a></h3>
-                        <a href=""><button class="primary-btn">Download Resume</button></a>
+                        <a href="#"><button class="primary-btn">Download Resume</button></a>
                 </nav>
         </header>
         <!-- header section -->
@@ -22,18 +22,18 @@
                 <div class="main-text">
                         <img src="./assets/Group.png" alt="Boy Photo">
                         <h1 class="main-text-tittle">"In the near future, I hope to become a Developer."</h1>
-                        <p class="main-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                        <a href=""><button class="primary-btn-main">Contact with me</button></a>
+                        <p class="main-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <a href="#footer-container"><button class="primary-btn-main">Contact with me</button></a>
                 </div>
         </section>
         <!-- main section -->
 
-        <!-- main section -->
+        <!-- main-2 section -->
          <div class="short-section">
                 <section class="web-container">
                         <div class="web-text">
                                 <h3 class="web-text-tittle">Why Web Development??</h3>
-                                <p class="web-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                                <p class="web-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
                                          Lorem Ipsum has been the industry's standard dummy text.
                                 </p>
                         </div>
@@ -72,40 +72,100 @@
                                         Lorem Ipsum has been the industry's standard dummy text.
                                 </p>
                         </div>
-                        <div class="fram">
-                                <iframe src="" frameborder="0"></iframe>
+                        <div class="frame">
+                                <iframe src="https://www.youtube.com/embed/DGHn2uOAVCE"></iframe>
                         </div>
                 </section>
                 <!-- Inspiration -->
 
-                <section class="Inspiration">
-                        <div class="Inspiration-text">
-                                <h3 class="Inspiration-text-tittle">My Inspiration</h3>
-                                <p class="Inspiration-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                <!-- Target -->
+                <section class="Target">
+                        <div class="Target-text">
+                                <h3 class="Target-text-tittle">My Current Target</h3>
+                                <p class="Target-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
                                         Lorem Ipsum has been the industry's standard dummy text.
                                 </p>
                         </div>
-                        <div class="fram">
-                                <iframe src="" frameborder="0"></iframe>
+                        <div class="target-language">
+                                <div class="target-language-1">
+                                        <img src="./assets/html.png" alt="Html Photo">
+                                        <h3 class="target-tittle">HTML</h3>
+                                        <p class="target-description">Lorem Ipsum is simply dummy text of the printing</p>
+                                        <a href="" target="_blank">Learn More</a>
+                                </div>
+                                <div class="target-language-2">
+                                        <img src="./assets/css.png" alt="Html Photo">
+                                        <h3 class="target-tittle">CSS</h3>
+                                        <p class="target-description">Lorem Ipsum is simply dummy text of the printing</p>
+                                        <a href="" target="_blank">Learn More</a>
+                                </div>
+                                <div class="target-language-3">
+                                        <img src="./assets/js.png" alt="Html Photo">
+                                        <h3 class="target-tittle">JS</h3>
+                                        <p class="target-description">Lorem Ipsum is simply dummy text of the printing</p>
+                                        <a href="" target="_blank" class="target-tittle-btn">Learn More</a>
+                                </div>
                         </div>
                 </section>
+                <!-- Target -->
 
-                <section class="Inspiration">
-                        <div class="Inspiration-text">
-                                <h3 class="Inspiration-text-tittle">My Current Target</h3>
-                                <p class="Inspiration-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                <!-- my-next-target -->
+                <section class="my-next-target">
+                        <div class="Target-text">
+                                <h3 class="Target-text-tittle">My Next Target</h3>
+                                <p class="Target-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
                                         Lorem Ipsum has been the industry's standard dummy text.
                                 </p>
                         </div>
-                        <div class="target">
-                                <img src="" alt="">
-                                <h3 class="target-tittle">HTML</h3>
-                                <p class="target-description">Lorem Ipsum is simply dummy text of the printing</p>
-                                <a href="" target="_blank"><button class="target-btn">Learn More</button></a>
+
+                        <div class="next-language">
+                                <div class="next-target-list">
+                                        <img src="./assets/react.png" alt="ReactJS Photo">
+                                        <div class="next-target-text">
+                                                <h3>ReactJS</h3>
+                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                                <a href="">Learn More</a>
+                                        </div>
+                                </div>
+        
+                                <div class="next-target-list">
+                                        <img src="./assets/nodejs.png" alt="ReactJS Photo">
+                                        <div class="next-target-text">
+                                                <h3>NodeJs</h3>
+                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                                <a href="">Learn More</a>
+                                        </div>
+                                </div>
+        
+                                <div class="next-target-list">
+                                        <img src="./assets/mongodb.png" alt="ReactJS Photo">
+                                        <div class="next-target-text">
+                                                <h3>MongoDB</h3>
+                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                                <a href="">Learn More</a>
+                                        </div>
+                                </div>
                         </div>
                 </section>
+                <!-- my-next-target -->
 
+                <!-- support -->
+                <section class="support">
+                        <div class="support-text">
+                                <h3 class="support-text-tittle">I need Support</h3>
+                                <p class="support-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                                        Lorem Ipsum has been the industry's standard dummy text.
+                                </p>
+                                <div class="input-field">
+                                        <input class="text" type="text" name="text" id="" placeholder="Suggest me any feedback for me">
+                                        <input class="submit" type="submit" value="submit">
+                                </div>
+                        </div>
+                </section>
+                <!-- support -->
 
          </div>
+         <!-- main-2 section -->
+
 </body>
 </html>
