--- a/index.html
+++ b/index.html
@@ -167,5 +167,18 @@
          </div>
          <!-- main-2 section -->
 
+         <!-- footer -->
+          <footer id="footer-container">
+                <div class="footer-content">
+                        <div class="footer-text">An Open Commitment by Awlad Hossain</div>
+                        <div class="footer-social">
+                                <a href="#"><img src="./assets/facebook.png" alt="facebook Photo"></a>
+                                <a href="#"><img src="./assets/github.png" alt="github Photo"></a>
+                                <a href="#"><img src="./assets/linkedin-icon 1.png" alt="linkedin Photo"></a>
+                        </div>
+                </div>
+          </footer>
+          <!-- footer -->
+
 </body>
 </html>
