create a footer part and added github

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="main-text">
                         <img src="./assets/Group.png" alt="Boy Photo">
                         <h1 class="main-text-tittle">"In the near future, I hope to become a Developer."</h1>
-                        <p class="main-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p class="main-text-description">Start with foundational programming languages such as <br> HTML, CSS, and JavaScript for web development.</p>
                         <a href="#footer-container"><button class="primary-btn-main">Contact with me</button></a>
                 </div>
         </section>
@@ -33,14 +33,15 @@
                 <section class="web-container">
                         <div class="web-text">
                                 <h3 class="web-text-tittle">Why Web Development??</h3>
-                                <p class="web-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-                                         Lorem Ipsum has been the industry's standard dummy text.
+                                <p class="web-text-description">If Jhanker Mahbub is a source of inspiration for you,<br> his passion for making learning accessible and fun could be a great motivator <br> 
+                                        for pursuing web development. His journey shows<br>
+                                         how impactful and fulfilling a career in this field can be.
                                 </p>
                         </div>
                         <div class="web-skill">
                                 <div class="web-skill-text">
                                         <h3 class="web-skill-text-tittle">High Demand for Web Developers</h3>
-                                        <p class="web-skill-text-description">The growth of e-commerce and online services increases the need for web development professionals.                                        </p>
+                                        <p class="web-skill-text-description">The growth of e-commerce and online services increases the need for web development professionals.</p>
                                         <a href="https://web.dev/learn/" target="_blank"><button class="web-skill-text-btn">Learn More</button></a>
                                 </div>
                                 <img src="./assets/Group 4.png" alt="">
@@ -68,8 +69,7 @@
                 <section class="Inspiration">
                         <div class="Inspiration-text">
                                 <h3 class="Inspiration-text-tittle">My Inspiration</h3>
-                                <p class="Inspiration-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-                                        Lorem Ipsum has been the industry's standard dummy text.
+                                <p class="Inspiration-text-description"> Jhanker is known for his innovative teaching methods, combining humor and practical <br> knowledge to make complex programming concepts easier to understand.
                                 </p>
                         </div>
                         <div class="frame">
@@ -82,27 +82,27 @@
                 <section class="Target">
                         <div class="Target-text">
                                 <h3 class="Target-text-tittle">My Current Target</h3>
-                                <p class="Target-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-                                        Lorem Ipsum has been the industry's standard dummy text.
+                                <p class="Target-text-description">That's a great choice! JavaScript is essential for web development and is widely used for both front-end and back-end development. Here are some steps and resources to help you get started with JavaScript
                                 </p>
                         </div>
                         <div class="target-language">
                                 <div class="target-language-1">
                                         <img src="./assets/html.png" alt="Html Photo">
                                         <h3 class="target-tittle">HTML</h3>
-                                        <p class="target-description">Lorem Ipsum is simply dummy text of the printing</p>
+                                        <p class="target-description">HTML (HyperText Markup Language) is the standard language for creating and structuring web pages and web applications.</p>
                                         <a href="" target="_blank">Learn More</a>
                                 </div>
                                 <div class="target-language-2">
                                         <img src="./assets/css.png" alt="Html Photo">
                                         <h3 class="target-tittle">CSS</h3>
-                                        <p class="target-description">Lorem Ipsum is simply dummy text of the printing</p>
+                                        <p class="target-description">CSS (Cascading Style Sheets) is a stylesheet language used to describe the presentation and layout of web pages.</p>
                                         <a href="" target="_blank">Learn More</a>
                                 </div>
                                 <div class="target-language-3">
                                         <img src="./assets/js.png" alt="Html Photo">
                                         <h3 class="target-tittle">JS</h3>
-                                        <p class="target-description">Lorem Ipsum is simply dummy text of the printing</p>
+                                        <p class="target-description">
+                                                JavaScript is a versatile programming language used to create dynamic and interactive elements on web pages.</p>
                                         <a href="" target="_blank" class="target-tittle-btn">Learn More</a>
                                 </div>
                         </div>
@@ -113,8 +113,7 @@
                 <section class="my-next-target">
                         <div class="Target-text">
                                 <h3 class="Target-text-tittle">My Next Target</h3>
-                                <p class="Target-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-                                        Lorem Ipsum has been the industry's standard dummy text.
+                                <p class="Target-text-description">My next target is to learn ReactJS for building dynamic user interfaces, Node.js for server-side JavaScript development, and MongoDB for scalable and flexible data storage in web applications.
                                 </p>
                         </div>
 
@@ -123,7 +122,7 @@
                                         <img src="./assets/react.png" alt="ReactJS Photo">
                                         <div class="next-target-text">
                                                 <h3>ReactJS</h3>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                                <p>A popular JavaScript library for building user interfaces, particularly single-page applications, using a component-based architecture.</p>
                                                 <a href="">Learn More</a>
                                         </div>
                                 </div>
@@ -132,7 +131,7 @@
                                         <img src="./assets/nodejs.png" alt="ReactJS Photo">
                                         <div class="next-target-text">
                                                 <h3>NodeJs</h3>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                                <p> A runtime environment that allows you to run JavaScript on the server side, enabling the creation of scalable network applications.</p>
                                                 <a href="">Learn More</a>
                                         </div>
                                 </div>
@@ -141,7 +140,7 @@
                                         <img src="./assets/mongodb.png" alt="ReactJS Photo">
                                         <div class="next-target-text">
                                                 <h3>MongoDB</h3>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                                <p>A NoSQL database that stores data in flexible, JSON-like documents, making it ideal for applications requiring fast, scalable, and flexible data storage.</p>
                                                 <a href="">Learn More</a>
                                         </div>
                                 </div>
@@ -153,8 +152,9 @@
                 <section class="support">
                         <div class="support-text">
                                 <h3 class="support-text-tittle">I need Support</h3>
-                                <p class="support-text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-                                        Lorem Ipsum has been the industry's standard dummy text.
+                                <p class="support-text-description">"Support" typically refers to assistance or help provided to someone in need.
+                                         It can encompass various forms of aid, guidance, or encouragement offered to individuals or groups 
+                                         facing challenges or seeking to achieve their goals.
                                 </p>
                                 <div class="input-field">
                                         <input class="text" type="text" name="text" id="" placeholder="Suggest me any feedback for me">
